# number_to_english

./: .gitignore  LICENSE  README.md  constants.py  pyproject.toml  type_defs.py  validation.pyi
num_to_language/: constants.py  converter.py  converter.pyi  main.py  validation.py  validation.pyi
tests/: test_converter.py  test_validation.py
